--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build with Gradle
         run: |
           ./gradlew assemble
-       # (Optional) Add steps for running tests and generating reports
+      # (Optional) Add steps for running tests and generating reports
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -71,7 +71,7 @@ jobs:
           ./gradlew check --info --stacktrace
           ./gradlew test
           ./gradlew jacocoTestReport
-      # (Optional) Add steps for generating coverage report and other post-test tasks
+      # (Optional) Add steps for generating coverage report and other post-test task
 
   publish:
     name: Publish Docker Image
