[DEPLOYMENT] Fixing database spring Jpa

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/gametime
+spring.datasource.url=jdbc:postgresql://localhost:5432/gametime_RatingUlasan
 spring.datasource.username=postgres
-spring.datasource.password=sayakamu
+spring.datasource.password=my-password
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
