--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/gametime_RatingUlasan
-#spring.datasource.username=postgres
-#spring.datasource.password=my-password
+spring.datasource.url=jdbc:postgresql://localhost:5432/gametime_RatingUlasan
+spring.datasource.username=postgres
+spring.datasource.password=my-password
 
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.xoxgrtqlmoccwndkfhaz
-spring.datasource.password=GameTimeRatingUlasan
+#spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+#spring.datasource.username=postgres.xoxgrtqlmoccwndkfhaz
+#spring.datasource.password=GameTimeRatingUlasan
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
