--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=gametime_RatingUlasan
 spring.profiles.active=${PRODUCTION:dev}
+management.endpoints.web.exposure.include=prometheus
